IrshadDev/src/objects/Portfolio__c.object
<CustomObject>
    <fields>
        <fullName>Broker__c</fullName>
        <label>Broker</label>
        <picklist>
            <picklistValues>
                <fullName>SBI Capsec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zerodha</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Buy_Amount__c</fullName>
        <formula>Buy_Qty__c *  Buy_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buy Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buy_Price__c</fullName>
        <label>Buy Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buy_Qty__c</fullName>
        <label>Buy Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Holding_Days__c</fullName>
        <formula>Sell_Date__c -  Purchase_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Holding Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sell_Amount__c</fullName>
        <formula>Sell_Qty__c *  Sell_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sell Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_Date__c</fullName>
        <label>Sell Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sell_Price__c</fullName>
        <label>Sell Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_Qty__c</fullName>
        <label>Sell Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Name__c</fullName>
        <label>Stock Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Type__c</fullName>
        <label>Stock Type</label>
        <picklist>
            <picklistValues>
                <fullName>Future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future-Intraday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity-Intraday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Portfolio</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Row-{0000}</displayFormat>
        <label>Portfolio Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>